# web_server

./: CMakeLists.txt  README.md  compile_commands.json  main.cpp
performance_tester/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/: connection.h  web_server.h
src/enums/: method.h
src/structs/: request.h  response.h
